# haskell-blackjack

./: .gitignore  LICENSE  haskell-blackjack.cabal
src/: Card.hs  Lib.hs
