name:                haskell-blackjack
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jamiereid/haskell-blackjack#readme
license:             BSD3
license-file:        LICENSE
author:              Jamie Reid
maintainer:          jamie@jre.id.au
copyright:           2017 Jamie Reid
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskell-blackjack-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-blackjack
  default-language:    Haskell2010

test-suite haskell-blackjack-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-blackjack
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jamiereid/haskell-blackjack
